# internal/handlers/structs.go
@@ -10,6 +10,6 @@ type HTTPError struct {
 	Error string `json:"error" example:"invalid parameter format"`
 }
 
-type JahreResponse struct {
-	Jahre []int `json:"jahre" example:"[2016,2017,2018,2019,2020,2021,2022,2023,2024]"`
+type YearsResponse struct {
+	Years []int `json:"jahre" example:"2022"`
 }
